Use removeLast() in filesystem mount path normalization
Assisted-by: codex:gpt-5.5